<resources>
    <string name="app_name">Address Book</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="phonenumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_contacts">No Contacts</string>
    <string name="no_contacts_subtitle">Use the \'+\' icon to add a new contact</string>
    <string name="ex_contact_name">Valmir Bekteshi</string>
    <string name="save">Save</string>
</resources>
